texto qr modificado

--- a/index.html
+++ b/index.html
@@ -236,9 +236,10 @@
       <div class="qr-text">
         <span class="title">COMPARTE TUS FOTOS</span>
         <p>
-          ¿Has hecho fotos e la boda? Compártelas con todo el mundo para que los
-          que salen puedan descargarlas. ¡Tranqui, sólo duran 30 días! Utiliza
-          el QR o el botón que te redirigirán a la web donde subirlas.
+          ¿Has hecho fotos e la boda? Compártelas para que todo el mundo pueda
+          verlas y así los novios puedan cogre las que les guste. ¡Tranqui, sólo
+          duran 30 días! Utiliza el QR o el botón que te redirigirán a la web
+          donde subirlas. ¡Gracias!
         </p>
       </div>
       <div class="qr-redirect">
