correcciones textos y estilos

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         </p>
 
         <p class="align-center">
-          ¿Cuando termina la fiesta?: cuando el cuerpo pida cama.
+          ¿Cuándo termina la fiesta?: cuando el cuerpo pida cama.
         </p>
         <p class="align-center">
-          ¿Como volver a casa si me lo he pasado demasiado bien y no puedo
+          ¿Cómo volver a casa si me lo he pasado demasiado bien y no puedo
           conducir? Habrá servicio de taxi disponible (pendiente poner número de
           taxi, aunque se tendrá apalabrado con anterioridad).
         </p>
@@ -135,7 +135,7 @@
     <section id="recomendations" class="recomendations">
       <div class="recomendations-text">
         <span class="title">NORMAS Y RECOMENDACIONES</span>
-        <p>Tenemos una serie de recomendaciones así como normas del recinto</p>
+        <p>Tenemos una serie de recomendaciones así como normas del recinto:</p>
         <ul>
           <li>
             Dress-code (vestimenta): hay un requisito indispensable que es ir
@@ -145,24 +145,24 @@
           <li>
             Hay piscina por lo que recomendamos ropa de baño, toalla y chanclas.
           </li>
-          <li>Llevar ropa cómoda de repuesto (por si se complica la noche)</li>
+          <li>Llevar ropa cómoda de repuesto (por si se complica la noche).</li>
         </ul>
         <p>
           A pesar de que queramos que todo fluya hay alguna cosa a tener en
           cuenta para garantizar la seguridad y diversión de todos:
         </p>
         <ul>
-          <li>No acercar cristal a la piscina</li>
+          <li>No acercar cristal a la piscina.</li>
           <li>
             No comer cerca de la piscina ya que nadie quiere bañarse con una
-            croqueta al lado
+            croqueta al lado.
           </li>
           <li>
-            Habrá niños y personas mayores, respetenles los máximo posible.
+            Habrá niños y personas mayores, respétenles los máximo posible.
           </li>
           <li>
-            Se puede hacer uso total de la casa pero las habitaciones son un
-            espacio privado que hay que respetar.
+            Se puede hacer uso total de la casa a excepción de las habitaciones,
+            que son un espacio privado que hay que respetar.
           </li>
         </ul>
       </div>
@@ -190,7 +190,7 @@
       <div class="carousel-text">
         <span class="title">GALERÍA</span>
         <p>
-          Por si no sabes quienes somos, para que no nos confundas con otros en
+          Por si no sabes quiénes somos, para que no nos confundas con otros en
           la fiesta XD!
         </p>
       </div>
@@ -236,10 +236,10 @@
       <div class="qr-text">
         <span class="title">COMPARTE TUS FOTOS</span>
         <p>
-          ¿Has hecho fotos e la boda? Compártelas para que todo el mundo pueda
-          verlas y así los novios puedan cogre las que les guste. ¡Tranqui, sólo
-          duran 30 días! Utiliza el QR o el botón que te redirigirán a la web
-          donde subirlas. ¡Gracias!
+          ¿Has hecho fotos de la boda? Compártelas para que todo el mundo pueda
+          verlas y así los novios puedan cogre las que más les guste. ¡Tranqui,
+          sólo duran 30 días! Utiliza el QR o el botón que te redirigirán a la
+          web donde subirlas. ¡Gracias!
         </p>
       </div>
       <div class="qr-redirect">
