--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="asistance-text">
         <span class="title">CONFIRMAR ASISTENCIA</span>
         <p>
-          Pódeis confirmar vuestra asisitencia a través de este formulario o a
+          Podéis confirmar vuestra asisitencia a través de este formulario o a
           través de whatsapp. En caso de venir con acompañante, facilítanos su
           nombre a fin de tener un recunento aproximado de la gente que vendrá.
           Si tenéis algo que comentarnos tenéis los mismos canales para ello,
