--- a/index.html
+++ b/index.html
@@ -104,8 +104,15 @@
         </p>
         <p class="align-center">
           ¿Cómo volver a casa si me lo he pasado demasiado bien y no puedo
-          conducir? Habrá servicio de taxi disponible (pendiente poner número de
-          taxi, aunque se tendrá apalabrado con anterioridad).
+          conducir? Habrá servicio de taxi disponible, ya lo tenemos apalabrado.
+        </p>
+        <p class="taxi-text">
+          <img
+            width="48"
+            height="48"
+            src="https://img.icons8.com/emoji/48/taxi-emoji.png"
+            alt="taxi-emoji"
+          /><a href="tel:690297030">Taxi Rafa: 690 29 70 30</a>
         </p>
         <p class="align-center">
           Esperamos veros en nuestro día y que sea una velada mágica. Ya solo
